force-app/main/default/objects/Dissolution__c/Dissolution__c.object-meta.xml
<CustomObject>
    <label>Dissolution</label>
    <nameField>
        <displayFormat>DIS-{00000}</displayFormat>
        <label>Dissolution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dissolutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>