force-app/main/default/objects/Dissolution__c/fields/Annual_reports_up_to_date__c.field-meta.xml
<CustomField>
    <fullName>Annual_reports_up_to_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Reports up to date</label>
    <type>Checkbox</type>
</CustomField>