force-app/main/default/objects/Dissolution__c/fields/Articles_of_Dissolution_Sent_to_State__c.field-meta.xml
<CustomField>
    <fullName>Articles_of_Dissolution_Sent_to_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Articles of Dissolution Sent to State</label>
    <type>Checkbox</type>
</CustomField>