force-app/main/default/objects/Dissolution__c/fields/Articles_of_Organization_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Articles_of_Organization_Incorporation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Art. of Org / Incorporation files rcvd</label>
    <type>Checkbox</type>
</CustomField>