force-app/main/default/objects/Dissolution__c/fields/Check_Payable_to__c.field-meta.xml
<CustomField>
    <fullName>Check_Payable_to__c</fullName>
    <label>Check Payable to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>