force-app/main/default/objects/Dissolution__c/fields/Dissolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Dissolution_Status__c</fullName>
    <label>Dissolution Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Set-up</fullName>
            </value>
            <value>
                <fullName>Final Return - Pending Info</fullName>
            </value>
            <value>
                <fullName>Dissolution - Pending Info</fullName>
            </value>
            <value>
                <fullName>Refer to Note</fullName>
            </value>
            <value>
                <fullName>Completed Final Return Not Needed</fullName>
                <label>Completed Final Return - Not Needed</label>
            </value>
            <value>
                <fullName>Cancelled/Suspended</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Long-term Pending</fullName>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>