force-app/main/default/objects/Dissolution__c/fields/Fulfilling__c.field-meta.xml
<CustomField>
    <fullName>Fulfilling__c</fullName>
    <label>Fulfilling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dissolution</fullName>
            </value>
            <value>
                <fullName>Dissolution + Final Return</fullName>
            </value>
            <value>
                <fullName>Final Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>