force-app/main/default/objects/Dissolution__c/fields/Information_on_backdated_annual_reports__c.field-meta.xml
<CustomField>
    <fullName>Information_on_backdated_annual_reports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Information on backdated annual reports</label>
    <type>Checkbox</type>
</CustomField>