force-app/main/default/objects/Dissolution__c/fields/Majority_Owner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Majority_Owner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Majority Owner (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dissolutions</relationshipLabel>
    <relationshipName>Dissolutions</relationshipName>
    <type>Lookup</type>
</CustomField>