force-app/main/default/objects/Dissolution__c/fields/Name_of_Business_to_dissolve__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Business_to_dissolve__c</fullName>
    <label>Name of Business to dissolve</label>
    <length>255</length>
    <type>Text</type>
</CustomField>