force-app/main/default/objects/Dissolution__c/fields/Notified_us_of_Received_Documents__c.field-meta.xml
<CustomField>
    <fullName>Notified_us_of_Received_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notified us of Received Documents</label>
    <type>Checkbox</type>
</CustomField>