force-app/main/default/objects/Dissolution__c/fields/Prepare_Articles_of_Dissolution__c.field-meta.xml
<CustomField>
    <fullName>Prepare_Articles_of_Dissolution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepare Articles of Dissolution</label>
    <type>Checkbox</type>
</CustomField>