force-app/main/default/objects/Dissolution__c/fields/Prepare_Tax_clearance__c.field-meta.xml
<CustomField>
    <fullName>Prepare_Tax_clearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepare Tax Clearance</label>
    <type>Checkbox</type>
</CustomField>