force-app/main/default/objects/Dissolution__c/fields/Send_VTO_link__c.field-meta.xml
<CustomField>
    <fullName>Send_VTO_link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send VTO link</label>
    <type>Checkbox</type>
</CustomField>