force-app/main/default/objects/Dissolution__c/fields/Tax_Clearance_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Tax_Clearance_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Clearance Acceptance</label>
    <type>Checkbox</type>
</CustomField>