force-app/main/default/objects/Dissolution__c/fields/Tax_Clearance_Sent__c.field-meta.xml
<CustomField>
    <fullName>Tax_Clearance_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Clearance Sent</label>
    <type>Checkbox</type>
</CustomField>