force-app/main/default/objects/Dissolution__c/fields/X1800Password__c.field-meta.xml
<CustomField>
    <fullName>X1800Password__c</fullName>
    <formula>Majority_Owner_Contact__r.X1800Password__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1800Password</label>
    <type>Text</type>
</CustomField>