force-app/main/default/objects/Dissolution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dissolution_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Name__c</columns>
    <columns>Majority_Owner_Contact__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Welcome_Email_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dissolution_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed Final Return Not Needed,Cancelled/Suspended,Completed,Discard</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>