force-app/main/default/objects/Dissolution__c/listViews/Final_Return.listView-meta.xml
<ListView>
    <fullName>Final_Return</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Majority_Owner_Contact__c</columns>
    <columns>Dissolution_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dissolution_Status__c</field>
        <operation>equals</operation>
        <value>Final Return - Pending Info</value>
    </filters>
    <label>Final Return</label>
    <language>en_US</language>
</ListView>